--- a/index.html
+++ b/index.html
@@ -9,17 +9,31 @@
 </head>
 
 <body>
-    <div class="card">
-        <div class="image">
-            <img src="" alt="">
-        </div>
-        <div class="text">
-            <span></span>
-            <h2></h2>
-            <p></p>
-        </div>
-        <div class="footer">
-            <p></p>
+    <div class="container ">
+        <div class="card">
+            <div class="image">
+                <div class="img-1st">
+                    <img src="images/hero-image-business-card.png" alt="">
+                </div>
+                <div class="svg-img">
+                    <img src="images/white-overlay.svg" alt="">
+                </div>
+            </div>
+            <div class="text">
+                <h2 class="">
+                    Perfect solution for small business</h2>
+                <p> Small businesses need to
+                    generate leads to grow. <br>You can use
+                    tools like Ringy.</p>
+            </div>
+            <hr style="border: 0; height: 1px; background-color: #dfe1e5;">
+            <div class="footer">
+                <img src="images/avatar-image-business-card.png" alt="">
+                <p>
+                    <span class="name lato-regular ">Amy Burgess</span><br>
+                    <span class="lato-regular designation">Customer Manger, Solution Oy</span>
+                </p>
+            </div>
         </div>
     </div>
 </body>
